<resources>
    <string name="app_name">SICV</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="sign_in_text">Entrar</string>
    <string name="register_text">Registrar</string>
    <string name="signup_title">Faça seu cadastro abaixo:</string>
    <string name="error_empty_email">Campo de email vazio</string>
    <string name="error_empty_password">Campo de senha vazio</string>
    <string name="error_invalid_password">Senha deve conter pelo menos 6 caracteres</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="cpf">CPF</string>
    <string name="name">Nome</string>
    <string name="telephone">Telefone</string>
    <string name="dateOfBirth">Data de nascimento</string>
    <string name="personalData">Dados Pessoais</string>
    <string name="accountData">Dados da Conta</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="signUp">Realizar cadastro</string>
    <string name="confirmPassword">Confirmar Senha</string>
    <string name="error_confirm_password">As senhas não conferem!</string>
    <string name="empty_name">Campo de nome vazio</string>
    <string name="empty_cpf">Campo de CPF vazio</string>
    <string name="invalid_cpf">CPF inválido</string>
    <string name="empty_telephone">Campo de telefone vazio</string>
    <string name="invalid_telephone">Telefone inválido</string>
    <string name="empty_date">Campo vazio</string>
    <string name="invalid_date">Data inválida</string>
    <string name="invalid_age_date">Para acesso ao aplicativo é preciso ter no mínimo 18 anos</string>
    <string name="internetConnectionError">Falha na conexão com a Internet</string>
    <string name="invalidUserEmail">Já existe um usuário cadastrado com este email</string>
    <string name="problemsInServer">Ocorreu um problema com o servidor, tente novamente</string>
    <string name="error">Erro</string>
    <string name="OK">OK</string>
    <string name="menuItem">item do menu</string>
    <string name="user_profile">Perfil do usuário</string>
    <string name="my_vehicles">Meus Veículos</string>
    <string name="nf">Notas Fiscais</string>
    <string name="maintenance">Manutenção</string>
    <string name="purchase">Comprar veículo</string>
    <string name="selectOneOption">Selecione uma das opções abaixo para fazer uso do aplicativo:</string>
    <string name="invalid_password_login">Senha incorreta, por favor verifique a senha digitada</string>
    <string name="invalid_email_login">Email não encontrado, por favor verifique se o email foi digitado corretamente</string>
    <string name="name_profile">Nome:</string>
    <string name="cpf_profile">CPF:</string>
    <string name="email_profile">E-mail:</string>
    <string name="date_profile">Data de nascimento:</string>
    <string name="telephone_profile">Telefone:</string>
    <string name="logout">Deslogar</string>
    <string name="todo_description">TODO</string>
    <string name="regexFirebaseNetworkException">.*\\boffline\\b.*</string>
    <string name="success">SUCESSO</string>
    <string name="successfulSignUp">Cadastro realizado com sucesso!</string>
    <string name="code_format">Código: %s</string>
    <string name="type_format">Tipo do veículo: %s</string>
    <string name="mark_format">Marca: %s</string>
    <string name="model_format">Modelo: %s</string>
    <string name="power_format">Potência: %s</string>
    <string name="price_format">Preço: %s</string>
    <string name="speed_format">Velocidade máxima: %s</string>
    <string name="buy_vehicle">Comprar veículo</string>
    <string name="vehicle_details">Detalhes do veículo</string>
    <string name="description_log_format">Descrição: %s</string>
    <string name="date_log_format">Data: %s</string>
    <string name="cost_log_format">Custo: %s</string>
    <string name="generate_ticket">Gerar Boleto</string>
    <string name="vehicle_code">Código do veículo:</string>
    <string name="vehicle_model">Modelo: </string>
    <string name="vehicle_model_maintenance">Modelo do veículo:</string>
    <string name="maintenance_code">Código da Manutenção: </string>
    <string name="money_format">Gasto Total: %s</string>
    <string name="details_maintenance">Detalhes da Manutenção</string>
    <string name="ok_button_text">Ok</string>
    <string name="logout_message_confirm">Tem certeza que deseja deslogar?</string>
    <string name="positive_button_text">Sim</string>
    <string name="negative_button_text">Não</string>
    <string name="no_vehicle_found_message">Não foi encontrado nenhum veículo</string>
    <string name="confirmDialogTitle">Tem certeza que deseja comprar o veículo selecionado?</string>
    <string name="schedule_a_date">Digite a data para retirada do veículo:</string>
    <string name="scheduleDate">Agendar data</string>
    <string name="cancel">Cancelar</string>
    <string name="buy">Comprar</string>
    <string name="confirm">Confirmar</string>
    <string name="doMaintenance">Fazer manutenção</string>
    <string name="title_dialog_do_maintenance">Tem certeza que deseja fazer manutenção do veículo selecionado?</string>
    <string name="successful_buy">Compra realizada com sucesso!</string>
    <string name="successful_maintenance">Seu veículo agora está em manutenção!</string>
    <string name="sicv_full_name">Sistema para Concessionárias de Veículos</string>
    <string name="cnpj_fake">CNPJ: 111.111.111/1111-11</string>
    <string name="type_ticket">Tipo da nota: %s</string>
    <string name="ticket_title">Nota Fiscal</string>
    <string name="my_tickets_title">Minhas Notas Fiscais</string>
    <string name="ticket">Cupom Fiscal</string>
    <string name="date_genereted">Data de emissão: %s</string>
    <string name="date_buy_type">Data agendada para retirada: %s</string>
</resources>
