<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseScreenStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textColor="@color/blue_marine"
        android:textSize="46sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            style="@style/EditTextStyle"
            android:id="@+id/emailEt"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/EditTextStyle"
            android:id="@+id/passwordEt"
            android:drawableStart="@drawable/ic_password_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/signButton"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="48dp"
        android:text="@string/sign_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <Button
        android:id="@+id/registerButton"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="62dp"
        android:background="@color/blue_grey_light"
        android:text="@string/register_text"
        app:layout_constraintEnd_toEndOf="@+id/signButton"
        app:layout_constraintStart_toStartOf="@+id/signButton"
        app:layout_constraintTop_toBottomOf="@+id/signButton" />

</android.support.constraint.ConstraintLayout>